# rust-svelte-template

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  docker-compose.yml  justfile
backend/: Cargo.toml
backend/.sqlx/: query-0554b0165e74ec9c9c95bea19b7984c1b3c5187522cab6f4375fa2dc43a5714b.json  query-0993ce1d021086578280bad2f37a9967c678866064ac4427bfc5dd4cd65fb5cc.json  query-1373c4b5c455e2e7b0a1d95f83fb5105985c724b34efea671cb7c35579b73805.json  query-157c1bd985528e1c55d8950fa3195a7fac312e0976bdef9baf08bf1f2e816864.json  query-168bddbf12c324fdd03ac0026a281480d8268dffaf2f87b81ef53956a3cc5101.json  query-16bc8d7e420f25de2ef95a7877481b5760dc13f9a7eed39e42a7d9b4293a8c1e.json  query-1f5f37bd85e2ed115d99c5c577b334e8414549212baf58d7f1a83864993bc569.json  query-3f59daf985b672803e300e4e0fe2f102c669257562a18d0544395741e25fbaa4.json  query-47235e9e9d26e2f315955b017f7f17718a67062d17dc99d7630d3cbb84a6dd82.json  query-47653087f8560f0e9d4c4193bb96d39da485bfddf27ed36c0cda2fc1b41b118f.json  query-5100c0f8a3b052749be93f24da576aa93f658d015207dc5990e856d40c13f1a9.json  query-6073807fa44507ff046b33a8c1eee29cc62b3b94a7466315c66a4cadc554c38e.json  query-7d2a646a9b2fc68609f617d90f457f7ced9173f7a95952ab616525024999d845.json  query-84921c76b8b5e2702e6cf162875bfbcf0029b75d8ed17b1324bcdabfc0045d1f.json  query-9c343357a6fcd064707038d1fd3b27b5d1b90b027642f990681c609d82e54907.json  query-a48c4e27dd24a5b890ee08ae3526f76d765fff65149cf20ff8ee188d38cd7e04.json  (+10 more)
backend/migrations/: 0001_users.sql  0002_notes.sql  (+1 more)
(+47 files in other folders)
